--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
         </div>
       </nav>
     </div>
+    <div>
+      <h1 id="Diffprofils">Les différents profils</h1>
+    </div>
     <div id="profils-section" class="image-container">
       <ul class="profiles-list">
         <li class="profilesdesc">
-          <img
-            src="img/Le.a_jardinier.ère_en_herbe.png"
-            alt="Jardinier_en_herbe"
-          />
+          <img src="img/Jardinier.ère_en_herbe.png" alt="Jardinier_en_herbe" />
           <a href="profils/Le_jardinier_en_herbe.html">
             <p class="nomprofil">Le.a jardinier.ière en herbe</p>
           </a>
@@ -100,10 +100,10 @@
         </li>
         <li class="profilesdesc">
           <img
-            src="img/L’admirateur.rice_de_la_faune.png"
+            src="img/Admirateur.rice_de_la_faune.png"
             alt="L'Admirateur.rice_de_la_faune"
           />
-          <a href="profils/L’admirateur.rice_de_la_faune.html">
+          <a href="profils/Admirateur.rice_de_la_faune.html">
             <p class="nomprofil">L'admirateur.rice de la faune</p>
           </a>
           <p>
@@ -112,8 +112,8 @@
           </p>
         </li>
         <li class="profilesdesc">
-          <img src="img/Le.a_méditateur.rice.png" alt="Le.a Méditateur.rice" />
-          <a href="profils/Le_Méditateur.html">
+          <img src="img/Méditateur.rice.png" alt="Le.a Méditateur.rice" />
+          <a href="profils/Méditateur.rice.html">
             <p class="nomprofil">Le.a méditateur.rice</p>
           </a>
           <p>
@@ -123,7 +123,7 @@
         </li>
         <li class="profilesdesc">
           <img
-            src="img/Le.a_curieux.se_des_sciences.png"
+            src="img/Curieux.se_des_Sciences.png"
             alt="Le.a_curieux.se_des_sciences"
           />
           <a href="profils/Le_Curieux_des_Sciences_Naturelles.html">
@@ -134,7 +134,7 @@
           </p>
         </li>
         <li class="profilesdesc">
-          <img src="img/L'aventurier.ère.png" alt="L'aventurier.ère" />
+          <img src="img/Aventurier.ère.png" alt="L'aventurier.ère" />
           <a href="profils/L'aventurier.ère.html">
             <p class="nomprofil">L'aventurier.ère</p>
           </a>
@@ -144,7 +144,7 @@
           </p>
         </li>
         <li class="profilesdesc">
-          <img src="img/L’artiste_passioné.e.png" alt="L’artiste_passioné.e" />
+          <img src="img/Artiste_passioné.e.png" alt="L’artiste_passioné.e" />
           <a href="profils/L’artiste_passioné.e.html">
             <p class="nomprofil">L’artiste passioné.e</p>
           </a>
@@ -155,7 +155,7 @@
         </li>
         <li class="profilesdesc">
           <img
-            src="img/L’apprenti.e_explorateur.rice.png"
+            src="img/Apprenti.e_explorateur.rice.png"
             alt="L'Admirateur_de_la_Faune"
           />
           <a href="profils/Le_citadin_vert.html">
@@ -168,7 +168,7 @@
         </li>
         <li class="profilesdesc">
           <img
-            src="img/L’apprenti.e_explorateur.rice.png"
+            src="img/Apprenti.e_explorateur.rice.png"
             alt="L’apprenti.e_explorateur.rice"
           />
           <a href="profils/L’apprenti.e_explorateur.rice.html">
@@ -178,7 +178,7 @@
         </li>
         <li class="profilesdesc">
           <img
-            src="img/L’apprenti.e_explorateur.rice.png"
+            src="img/Apprenti.e_explorateur.rice.png"
             alt="L'Admirateur_de_la_Faune"
           />
           <a href="profils/L’explorateur_contemplatif.html">
@@ -192,7 +192,7 @@
         <li class="profilesdesc">
           <img
             id="ecologisteengagéimg"
-            src="img/L’écologiste_engagé.e.png"
+            src="img/Écologiste_engagé.e.png"
             alt="L’écologiste_engagé.e"
           />
           <a href="/profils/L’écologiste_engagé.e.html">
